--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,8 +1,8 @@
+<%= render 'layouts/modal_signup' %>
+
 <!-- Page Contents -->
-<div class="">
-  <h1 class="">Qwickbit</h1>
-  <h2 class="">
-    The Platform that enables business owners to sell locally and get paid immediatly in Bitcoin
-  </h2>
-  <%= link_to "Sign up", new_business_path %>
+<div class="landing-page-wrapper">
+  <%= render "static_pages/partials/cta" %>
+  <%= render "static_pages/partials/promo" %>
+  <%= render "static_pages/partials/contact" %>
 </div>
