--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,48 +1,50 @@
-<nav id="header-nav">
-  <div class="nav-wrapper container">
-    <span class="rate-wrapper">
-      <span class="rate-title">Average</span>
-      <span class="rate"><%= current_rate.average_rate %></span>
-      <span class="rate-title">Coinbase</span>
-      <span class="rate"><%= current_rate.coinbase_rate %></span>
-      <span class="rate-title">Ok Coin</span>
-      <span class="rate"><%= current_rate.okcoin_rate %></span>
-      <span class="rate-title">Bitfinex</span>
-      <span class="rate"><%= current_rate.bitfinex_rate %></span>
-    </span>
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-    <ul class="right hide-on-med-and-down">
-      <li><%= link_to "QwickBit", root_path, class:"nav-logo" %></li>
-      <li><%= link_to "QwickBit Locations", locations_path %></li>
-      <% if current_business %>
-      <li>
-        <a href="#" class="dropdown-button" data-activates="profile-dropdown">
-        <%= current_business.name %><i class="material-icons right">arrow_drop_down</i>
-        </a>
-      </li>
-      <ul id="profile-dropdown" class="dropdown-content">
-        <li><%= link_to "Profile", business_path(current_business.id) %></li>
+<div class="navbar-fixed">
+  <nav id="header-nav">
+    <div class="nav-wrapper container">
+      <span class="rate-wrapper">
+        <span class="rate-title">Average</span>
+        <span class="rate"><%= current_rate.average_rate %></span>
+        <span class="rate-title">Coinbase</span>
+        <span class="rate"><%= current_rate.coinbase_rate %></span>
+        <span class="rate-title">Ok Coin</span>
+        <span class="rate"><%= current_rate.okcoin_rate %></span>
+        <span class="rate-title">Bitfinex</span>
+        <span class="rate"><%= current_rate.bitfinex_rate %></span>
+      </span>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><%= link_to "QwickBit", root_path, class:"nav-logo" %></li>
+        <li><%= link_to "QwickBit Locations", locations_path %></li>
+        <% if current_business %>
+        <li>
+          <a href="#" class="dropdown-button" data-activates="profile-dropdown">
+          <%= current_business.name %><i class="material-icons right">arrow_drop_down</i>
+          </a>
+        </li>
+        <ul id="profile-dropdown" class="dropdown-content">
+          <li><%= link_to "Profile", business_path(current_business.id) %></li>
+          <li><%= link_to "Wallets", wallets_path %></li>
+          <li><%= link_to "Add Items", new_item_path %></li>
+          <li><%= link_to "Log out", logout_path, method: :delete %></li>
+        </ul>
+        <% else %>
+        <li><%= link_to "Sign up", new_business_path %></li>
+        <li><%= link_to "Log in", login_path %></li>
+        <% end %>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><%= link_to "QwickBit", root_path, class:"nav-logo" %></li>
+        <li><%= link_to "QwickBit Locations", locations_path %></li>
+        <% if current_business %>
+        <li><%= link_to current_business.name, business_path(current_business.id) %></li>
         <li><%= link_to "Wallets", wallets_path %></li>
         <li><%= link_to "Add Items", new_item_path %></li>
         <li><%= link_to "Log out", logout_path, method: :delete %></li>
+        <% else %>
+        <li><%= link_to "Sign up", new_business_path %></li>
+        <li><%= link_to "Log in", login_path %></li>
+        <% end %>
       </ul>
-      <% else %>
-      <li><%= link_to "Sign up", new_business_path %></li>
-      <li><%= link_to "Log in", login_path %></li>
-      <% end %>
-    </ul>
-    <ul class="side-nav" id="mobile-demo">
-      <li><%= link_to "QwickBit", root_path, class:"nav-logo" %></li>
-      <li><%= link_to "QwickBit Locations", locations_path %></li>
-      <% if current_business %>
-      <li><%= link_to current_business.name, business_path(current_business.id) %></li>
-      <li><%= link_to "Wallets", wallets_path %></li>
-      <li><%= link_to "Add Items", new_item_path %></li>
-      <li><%= link_to "Log out", logout_path, method: :delete %></li>
-      <% else %>
-      <li><%= link_to "Sign up", new_business_path %></li>
-      <li><%= link_to "Log in", login_path %></li>
-      <% end %>
-    </ul>
-  </div>
-</nav>
+    </div>
+  </nav>
+</div>
