signup and login modals

--- a/app/views/layouts/_modal_signup.html.erb
+++ b/app/views/layouts/_modal_signup.html.erb
@@ -1,4 +1,4 @@
-<div id="modal1" class="modal modal-fixed-footer">
+<div id="signup-modal" class="modal modal-fixed-footer">
   <div class="modal-content">
     <h4>Sign Up</h4>
     <%= form_for @business do |f| %>
