--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,5 +1,5 @@
 <%= render 'layouts/modal_signup' %>
-
+<%= render 'layouts/modal_login' %>
 <!-- Page Contents -->
 <div class="landing-page-wrapper">
   <%= render "static_pages/partials/cta" %>
