--- a/app/views/static_pages/partials/_cta.html.erb
+++ b/app/views/static_pages/partials/_cta.html.erb
@@ -5,7 +5,7 @@
       The online platform for businesses to sell locally for Bitcoin
     </h4>
     <% if !current_business %>
-    <a href="#modal1" class="modal-trigger wave-effect waves-light btn">Sign Up</a>
+    <a href="#signup-modal" class="modal-trigger wave-effect waves-light btn">Sign Up</a>
     <% end %>
     <%#= link_to "Sign up", new_business_path, class:"wave-effect waves-light btn" %>
   </div>
