--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,7 +115,52 @@ LANDING PAGE
   }
 }
 
-@media screen and (max-width: 992px) {
+@media (max-width: 992px) {
+  .nav-logo {
+    display: none;
+  }
+  #header-nav {
+    text-align: center;
+    .rate-wrapper {
+      position: static;
+    }
+  }
+  .landing-cta {
+    height: 90vh;
+    h2 {
+      /* font-size: 1.5em; */
+    }
+    h4 {
+      /* font-size: 1.5em; */
+    }
+  }
+  .landing-promo {
+    height: 115vh;
+    .container {
+      @include landing-position(10vh);
+    }
+    .col {
+      margin-bottom: 15px;
+      h5 {
+        font-size: 1.2em;
+      }
+    }
+  }
+  .landing-contact {
+    height: 115vh;
+    .container {
+      @include landing-position(10vh);
+    }
+    .col {
+      margin-bottom: 15px;
+      h5 {
+        font-size: 1.2em;
+      }
+    }
+  }
+}
+
+@media only screen and (max-device-width: 992px) {
   .nav-logo {
     display: none;
   }
