--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,8 +76,13 @@ LANDING PAGE
 .landing-cta,
 .landing-promo,
 .landing-contact {
-  height: 90vh;
+  height: 100vh;
   width: 100vw;
+}
+.cta-overlay {
+  height: 100%;
+  width: 100%;
+  background: rgba(35, 35, 50, 0.6);
 }
 .landing-cta {
   background: url("https://upload.wikimedia.org/wikipedia/commons/5/5b/Portones_Shopping_Mall.png");
@@ -88,17 +93,16 @@ LANDING PAGE
     margin: 0;
   }
   .container {
-    @include landing-position(25vh);
+    @include landing-position(30vh);
     text-align: center;
-    padding: 30px;
-    background-color: rgba(220,220,220,0.6);
+    color: white;
   }
 }
 
 .landing-promo {
   background: $grey;
   .container {
-    @include landing-position(25vh);
+    @include landing-position(30vh);
   }
   .col {
     text-align: center;
