--- a/app/views/static_pages/partials/_cta.html.erb
+++ b/app/views/static_pages/partials/_cta.html.erb
@@ -1,12 +1,14 @@
 <div class="landing-cta">
-  <div class="container">
-    <h2 class="">QwickBit</h2>
-    <h4 class="">
-      The online platform for businesses to sell locally for Bitcoin
-    </h4>
-    <% if !current_business %>
-    <a href="#signup-modal" class="modal-trigger wave-effect waves-light btn">Sign Up</a>
-    <% end %>
-    <%#= link_to "Sign up", new_business_path, class:"wave-effect waves-light btn" %>
+  <div class="cta-overlay">
+    <div class="container">
+      <h2 class="">QwickBit</h2>
+      <h4 class="">
+        The online platform for businesses to sell locally for Bitcoin
+      </h4>
+      <% if !current_business %>
+      <a href="#signup-modal" class="modal-trigger wave-effect waves-light btn">Sign Up</a>
+      <% end %>
+      <%#= link_to "Sign up", new_business_path, class:"wave-effect waves-light btn" %>
+    </div>
   </div>
 </div>
