--- a/app/views/static_pages/locations.html.erb
+++ b/app/views/static_pages/locations.html.erb
@@ -1,6 +1,5 @@
-
 <%= render 'layouts/modal_signup' %>
-<div id = "googleMap"></div>
+<%= render 'layouts/modal_login' %>
 <div id="googleMapSearch" class="z-depth-3">
   <nav>
     <div class="nav-wrapper">
@@ -17,6 +16,7 @@
 
   </div>
 </div>
+<div id = "googleMap"></div>
 
 <%  @businesses.each do |b| %>
 
