adds heroku scheduler to run rake get:rate

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,13 +3,13 @@
     <div class="nav-wrapper container">
       <span class="rate-wrapper">
         <span class="rate-title">Average</span>
-        <span class="rate"><%#= current_rate.average_rate %>0</span>
+        <span class="rate"><%= current_rate.average_rate %></span>
         <span class="rate-title">Coinbase</span>
-        <span class="rate"><%#= current_rate.coinbase_rate %>0</span>
+        <span class="rate"><%= current_rate.coinbase_rate %></span>
         <span class="rate-title">Ok Coin</span>
-        <span class="rate"><%#= current_rate.okcoin_rate %>0</span>
+        <span class="rate"><%= current_rate.okcoin_rate %></span>
         <span class="rate-title">Bitfinex</span>
-        <span class="rate"><%#= current_rate.bitfinex_rate %>0</span>
+        <span class="rate"><%= current_rate.bitfinex_rate %></span>
       </span>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
