adds style to business show

--- a/app/views/layouts/_modal_login.html.erb
+++ b/app/views/layouts/_modal_login.html.erb
@@ -12,7 +12,7 @@
   </div>
   <div class="modal-footer">
     <div class="">
-      <%= f.submit "Log In", class:"waves-light wave-effect btn" %>
+      <%= f.submit "Log In", class:"waves-light wave-effect btn btn-green" %>
     </div>
   <% end %>
   </div>
