--- a/app/views/layouts/_modal_signup.html.erb
+++ b/app/views/layouts/_modal_signup.html.erb
@@ -46,7 +46,7 @@
       </div>
   </div>
   <div class="modal-footer">
-    <%= f.submit "List Business", class:"btn waves-light wave-effect" %>
+    <%= f.submit "List Business", class:"btn waves-light wave-effect btn-green" %>
   </div>
   <% end %>
 </div>
