--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,7 +14,7 @@
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><%= link_to "QwickBit", root_path, class:"nav-logo" %></li>
-        <li><%= link_to "QwickBit Locations", locations_path %></li>
+        <li><%= link_to "QwickBit Map", locations_path %></li>
         <% if current_business %>
         <li>
           <a href="#" class="dropdown-button" data-activates="profile-dropdown">
