--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,22 +29,42 @@ $primary-light: #e0f7fa;
 $secondary: #ff5722;
 $secondary-light: #ff7043;
 $nav-text: #546e7a;
+$btn-green: #8bc34a;
+$btn-green-hover: #c5e1a5;
+$btn-red: #f44336;
+$btn-red-hover: #e57373;
+$btn-blue: #2196f3;
+$btn-blue-hover: #64b5f6;
+$border-color: #C0E8E8;
 
 @mixin landing-position($position) {
   position: relative;
   top: $position;
 }
 
+
+.btn-green {
+  background-color: $btn-green;
+  &:hover {
+    background-color: $btn-green-hover;
+  }
+}
+.btn-blue {
+  background-color: $btn-blue;
+  &:hover {
+    background-color: $btn-blue-hover;
+  }
+}
+.btn-red {
+  background-color: $btn-red;
+  &:hover {
+    background-color: $btn-red-hover;
+  }
+}
 select {
   display: block;
 }
 
-.btn {
-  background: $secondary;
-  &:hover {
-    background-color: $secondary-light;
-  }
-}
 /*
 NAVBAR
 */
@@ -61,10 +81,12 @@ NAVBAR
     }
     .rate-title {
       top: -10px;
+      color: #8bc34a;
     }
     .rate {
       top: 10px;
       left: -41px;
+      color: #8bc34a;
     }
   }
 }
@@ -149,12 +171,54 @@ $searchInput: #C0E8E8;
       height: 90%;
       overflow: scroll;
       .result {
-        border-bottom: 1px solid $searchInput;
+        border-bottom: 1px solid $border-color;
         padding: 15px;
+        cursor: pointer;
+        margin-bottom: 5px;
       }
     }
   }
 }
+
+/*
+BUSINESS SHOW
+*/
+.businesses-show-wrapper {
+  h1 {
+    margin-top: 0;
+  }
+  .btn span {
+    position: relative;
+    bottom: 4px;
+    left: 2px;
+  }
+  .business-description {
+    margin-top: 35px;
+  }
+  .business-description {
+    border-bottom: 2px solid $border-color;
+    padding-bottom: 20px;
+  }
+  .business-item-wrapper {
+    margin-top: 20px;
+    .item-btn-wrapper {
+      position: relative;
+      bottom: 5px;
+      left: 10px;
+      .no-wallet {
+        font-weight: bold;
+      }
+    }
+    .item-name {
+      float: left;
+      margin-top: 0;
+    }
+    .business-item {
+      padding: 15px;
+    }
+  }
+}
+
 
 /*
 MEDIA QUERIES
