--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,3 +1,4 @@
-<div class="item-form">
-  <%= render 'layouts/items_form' %>
+<div class="container edit-form-wrapper">
+  <h4>Edit Item</h4>
+  <%= render 'layouts/forms/item_edit_form' %>
 </div>
