--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,8 +1,3 @@
-<div class="ui four column doubling grid container">
-<div class="ui text container">
-
-<div class="business-form">
-  <%= render 'layouts/business_form' %>
-</div>
-</div>
+<div class="edit-business-form container">
+  <%= render 'layouts/forms/business_edit_form' %>
 </div>
